# masterproef

./: README.md
Foutenanalyse/: analyse.py
OpenGL/: CMakeLists.txt
OpenGL_Project/: CMakeLists.txt
OpenGL_Project/balls/: ball.fragmentshader  ball.vertexshader  balls.cpp
Unity_LightFieldRecon/Assets/Materials/: LightField1.mat  LightFieldBlockGradient.mat  LightFieldBlocks.mat  LightFieldMulti.mat  LightFieldVertex.mat
Unity_LightFieldRecon/Assets/Resources/: flowers_baked_correct.csv  tarot_large4_0909.gd.json
Unity_LightFieldRecon/Assets/Scenes/: Multiquads.unity  SampleScene.unity
Unity_LightFieldRecon/Assets/Scripts/: DrawQuad.cs  FPSDisplay.cs  LF_Testing.cs  LightFieldBlocks.cs  LightFieldBlocksColor.cs  LightFieldBlocksSame.cs  LightFieldBlocksSplit.cs  LightFieldBlocksWColorGrad.cs  LightFieldMulti.cs  LightFieldMulti2.cs  LightFieldReconstruction.cs  LightField_Bikes.cs  LightField_Flowers.cs  ScreenshotTaker.cs  TextureCacher.cs
Unity_LightFieldRecon/Assets/Shaders/: LightField.shader  LightField2.shader  LightField2b.shader  LightFieldBlocks.shader  LightFieldBlocksWColorgrad.shader  LightFieldMulti.shader  LightFieldMulti2.shader  LightFieldVertex.shader  Sphere Shader.shader  starswirl.shader
Unity_LightFieldRecon/Build_Windows/LFBikes4min_Data/: app.info
Unity_LightFieldRecon/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
Unity_Shadertoy/Assets/Materials/: Field.mat  (+4 more)
Unity_Shadertoy/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+11 files in other folders)
